Results/spots/t2.xlarge/us-east-2/41d91b8aa1c60453fdac0bc96fdfdecc5840163c/tempSecGroup.json
{
    "IpPermissionsEgress": [
        {
            "IpProtocol": "-1", 
            "PrefixListIds": [], 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "Description": "temporary sec group", 
    "IpPermissions": [
        {
            "PrefixListIds": [], 
            "FromPort": 22, 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "ToPort": 22, 
            "IpProtocol": "tcp", 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "GroupName": "temp-time-mes", 
    "VpcId": "vpc-5a83d532", 
    "OwnerId": "530329064002", 
    "GroupId": "sg-03685be47ff08f2c8"
}
